syntax = "proto3";

package pb;

import "article.proto";

option go_package = "github.com/MonitorAllen/nostalgia/pb";

message CreateArticleRequest {
  optional string title = 1;
  optional string summary = 2;
  optional string content = 3;
  optional bool is_publish = 4;
  optional int64 category_id = 5;
}

message CreateArticleResponse {
  Article article = 1;
}
