syntax = "proto3";

package pb;

import "article.proto";

option go_package = "github.com/MonitorAllen/nostalgia/pb";

message UpdateArticleRequest {
  string id = 1;
  optional string title = 2;
  optional string summary = 3;
  optional string content = 4;
  optional bool is_publish = 5;
}

message UpdateArticleResponse {
  Article article = 1;
}
